--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macsploit-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,5 +8,8 @@
   },
   "author": "",
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@types/node": "^24.7.2"
+  }
 }
